# anyfs

./: .clang-format  .editorconfig  .gitignore  .prettierignore  .prettierrc.json  CMakeLists.txt  README.md  build-7zfm.sh  build.config.toml  build.user.toml.example  cross-win32-fuse.txt  cross-win32.txt  cross-win64-fuse.txt  meson.build  meson_options.txt  mingw32-toolchain.cmake  mingw64-toolchain.cmake  peru.yaml  test_debian_crash.mjs  test_http.mjs  test_targeted.mjs
.github/workflows/: linux.yml  mingw64.yml  ts.yml  wasm-sysroot.yml  wasm.yml
configs/: lkl_defconfig
docs/: ARCHITECTURE.md  ARCHITECTUREv1.md  BUILD-7zFM.md  README.md  anyfs-fuse.md  anyfs-gui.md  anyfs-winfsp-plan.md  async-backends.md  ci-sccache.md  distribution.md  doublecmd-wfx-plan.md  lkl-busybox-plan.md  lkl-servers.md  multi-partition-ux.md  ts-packages.md  wasm-sysroot.md  win32-cross-compile.md  winfsp-windows-fuse-plan.md
docs/superpowers/plans/: 2026-05-30-e2e-test-suite.md  2026-05-31-build-system-refactor-p0-p1.md  2026-05-31-nbd-fd-transport-poc.md  2026-06-01-nbd-proxy.md  2026-06-10-build-and-test-hardening.md  2026-06-11-wasm-web-electron-ci.md
docs/superpowers/specs/: 2026-05-29-ts-refactoring-design.md  2026-05-30-e2e-test-suite-design.md  2026-05-31-build-system-refactor-design.md  2026-05-31-nbd-fd-transport-poc-design.md  2026-06-01-nbd-proxy-design.md  2026-06-11-wasm-web-electron-ci-design.md
include/: anyfs.h  anyfs_api.h  anyfs_disk.h  anyfs_format.h  anyfs_kernel.h  anyfs_path.h  anyfs_session.h  anyfs_share.h
include/mingw-shims/sys/: uio.h
patches/libblkid/: smoke.c
patches/libblkid/shim/: config.h  grp.h  mingw_shims.c  partopo_stubs.c
patches/linux/wasm/: 01-xfs-this-address-wasm.patch  series
patches/qemu/: 0001-thread-pool-inline-emscripten.patch  0002-meson-emscripten.patch  0003-qapi-meson-emscripten.patch  0004-qemu-timer-emscripten-sleep.patch  0005-fdmon-poll-emscripten.patch  0006-oslib-posix-emscripten.patch  0007-meson-cross-emscripten.patch  0008-configure-emscripten.patch  0009-gitignore.patch
scripts/: build_anyfs.sh  build_anyfs_browser_wasm.sh  build_anyfs_wasm.sh  build_boot_wasm.sh  build_libblkid_mingw.sh  build_libblkid_wasm.sh  build_lkl.sh  build_lkl_wasm.sh  build_qemu.sh  build_qemu_shared.sh  build_qemu_wasm.sh  build_wasm_sysroot.sh  cross-anyfs-mingw32.txt  cross-anyfs-mingw64.txt  doctor.sh  fetch_wasm_ld.sh  fetch_wasm_sysroot.sh  gen_lkl_config.sh  gen_lkl_config_wasm.sh  lint-no-hardcoded-paths.sh  lint-shellcheck.sh  mkwinfsp_implib.sh  oot_fs.sh  package_linux.sh  package_mingw64.sh  package_win32.sh  repro-browser-mount.mjs  run_action_local.sh  sync_wasm_bundle.sh
scripts/git-hooks/: install.sh  pre-commit
scripts/lib/: config.sh  emscripten-cross.meson  glib-2.88.0-emscripten-fd-query-path.patch  wasm_exports.sh  wasm_sysroot.manifest
scripts/lkl-wasm-tools/: syscall_defs_preseed.h  wasm_fix_absolute_brackets.py  wasm_prefix_kernel_symbols.py
scripts/oot_fs/: apfs.Kconfig  apfs.Makefile
scripts/poc-nbd/: FINDINGS.md  launch.mjs  make-test-image.mjs  nbd-server.mjs  test-stage1.mjs  test-stage2.mjs
scripts/poc-nbd/native-transport/: binding.gyp  package.json  transport.c
src/7z-plugin/: ClassDefs.cpp  DllExports.cpp  FileFolderPluginOpen_lkl.cpp  FilePlugins_lkl.cpp  LklFolder.cpp  LklFolder.h  LklFolderManager.cpp  LklFolderManager.h  LklSession.cpp  LklSession.h  Makefile  StdAfx.cpp  StdAfx.h  lkl-plugin.def  lkl_bridge.c  lkl_bridge.h
src/7z-plugin/compat-include/: CommCtrl.h  HtmlHelp.h  MAPI.h  NTSecAPI.h  OleCtl.h  Psapi.h  ShObjIdl.h  ShlGuid.h  ShlObj.h  Shlwapi.h  TlHelp32.h  WinUser.h  WinVer.h  Windows.h
src/7z-plugin/contrib/: htmlhelp.c  win32_compat_stubs.c
src/bench/: lkl_loopbench.c  lkl_shmem_relay_bench.c  lkl_zerobench.c
src/cli/: shell.c
src/core/: aio_blk_backend.c  aio_blk_backend.h  anyfs.c  anyfs_backend.c  anyfs_backend.h  anyfs_container.c  anyfs_container.h  anyfs_core.c  anyfs_disk.c  anyfs_disk_dump.c  anyfs_disk_dump.h  anyfs_dm.c  anyfs_dm.h  anyfs_format.c  anyfs_format.h  anyfs_internal.h  anyfs_kernel.c  anyfs_mount.c  anyfs_mount.h  anyfs_path.c  anyfs_path.h  anyfs_probe.c  anyfs_probe.h  anyfs_session.c  anyfs_share.c  anyfs_share.h  anyfs_strbuf.c  anyfs_strbuf.h  anyfs_sysfs.c  anyfs_sysfs.h  gio_async_blk_backend.c  gio_async_blk_backend.h  gio_backend.c  gio_backend.h  gio_blk_backend.c  gio_blk_backend.h  jsonw.h  kindprobe.c  kindprobe.h  path_dsl.c  (+12 more)
src/fuse/: anyfs_fuse.c  fuse_main.c
src/gui/: anyfs_gui.c
src/host_proxy/: host_proxy.c  host_proxy.h
src/ksmbd/: fastsync_win.h  host_proxy.c  host_proxy.h  ksmbd_ipc.c  ksmbd_main.c  ksmbd_stubs.c  lkl_fastsync.c  lkl_fastsync.h  lkl_ksmbd.c
src/ksmbd/win32-compat/: endian.h  grp.h  poll.h  pwd.h  syslog.h
src/lspart/: anyfs_lspart.c  lspart_main.c  meson.build
src/nfsd/: lkl_nfsd.c  nfsd_main.c
src/server_common/: server_common.c  server_common.h
tests/: bench_backends.c  bench_concurrent.c  bench_delay.sh  bench_raw_io.c  common-cdp.mjs  common.mjs  run-all.mjs  run_tests.sh  setup.sh  smoke-debian-qcow2.sh  test-async-boot.mjs  test-atomics.mjs  test-cdp.mjs  test-core.mjs  test-direct-module.mjs  test-prewarm-direct.mjs  test-prewarm-e2e.mjs  test_nfsd_pseudo_root.c  test_qemu_mount.c  test_raw_mount.c  test_wasm_exports.sh
tests/diagnostics/: README.md  common.mjs  run-all.mjs  test-async-boot.mjs  test-atomics.mjs  test-cdp.mjs  test-direct-module.mjs  test-prewarm-direct.mjs  test-prewarm-e2e.mjs  test-worker-debug.mjs
tests/unit/: test_path_dsl.c  test_share_helpers.c
ts/: .gitignore  .npmrc  .prettierignore  .prettierrc.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
ts/examples/electron-demo/: README.md  esbuild.main.mjs  package.json  tsconfig.json  tsup.config.ts
ts/examples/vite-demo/: README.md  index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.worker.json  vite.config.ts
ts/native/: anyfs_ts.c
ts/tests/: native-session.test.mjs
ts/tests/e2e/: .gitignore  FINDINGS.md  README.md  package.json  playwright.config.ts  (+1 more)
(+77 files in other folders)
